# color-sort-puzzle-solver

./: .gitignore  Cargo.toml  LICENSE.txt  readme.md
src/: lib.rs  main.rs
src/models/: container.rs  mod.rs  state.rs  transition.rs  with_score.rs
