[package]
name = "color-sort-solver"
description="color-sort game optimal solver"
authors=["Amr Saber amr.m.saber.mail@gmail.com"]
version = "0.1.0"
edition = "2021"
license-file="LICENSE.txt"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
